--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # 请填入你的真实配置
 
 # API Key (从 https://apis.kuai.host/register?aff=uU68 获取)
-ANTHROPIC_AUTH_TOKEN=sk-vfcg4jKtxrPygNidqaqHSBMF2PyvRQanIJxEVkYDXAHWdNZ0
+ANTHROPIC_AUTH_TOKEN=sk-xxx
 
 # API Base URL
-ANTHROPIC_BASE_URL=https://privnode.com
+ANTHROPIC_BASE_URL=https://api.kuai.host
