--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Claude Code API Configuration
 # 请填入你的真实配置
 
-# API Key (从 https://apis.kuai.host/register?aff=uU68 获取)
-ANTHROPIC_AUTH_TOKEN=sk-xxxx
+# API Key (从 https://api.kuai.host/register?aff=z2C8 获取)
+ANTHROPIC_AUTH_TOKEN=sk-swLqzK7LV05Gt5uR9BzpsGwM4DC0fHcSJ8KNAtLZmWRwjqaZ
 
 # API Base URL
-ANTHROPIC_BASE_URL=https://api.kuai.host
+ANTHROPIC_BASE_URL=https://newapi.netlib.re
