--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # 请填入你的真实配置
 
 # API Key (从 https://api.kuai.host/register?aff=z2C8 获取)
-ANTHROPIC_AUTH_TOKEN=sk-swLqzK7LV05Gt5uR9BzpsGwM4DC0fHcSJ8KNAtLZmWRwjqaZ
+ANTHROPIC_AUTH_TOKEN=sk-xxxx
 
 # API Base URL
-ANTHROPIC_BASE_URL=https://newapi.netlib.re
+ANTHROPIC_BASE_URL=https://api.kuai.host
